# CloudCompare-CGAL-Classifier-plugin

.ci/: conda-macos.yml  conda-win.yml
.github/workflows/: build-plugin.yml  build.yml
plugins/core/Standard/: CMakeLists.txt
plugins/core/Standard/MyPlugin/: CMakeLists.txt  info.json
plugins/core/Standard/MyPlugin/include/: CMakeLists.txt  MyPlugin.h
plugins/core/Standard/MyPlugin/src/: CMakeLists.txt  MyPlugin.cpp
plugins/core/Standard/qRandomForestClassifier/: CMakeLists.txt  README.md  info.json  qRandomForestClassifier.qrc
plugins/core/Standard/qRandomForestClassifier/include/: CMakeLists.txt  Classifier.h  qRFCClassifDialog.h  qRFCEvaluationDialog.h  qRFCFeatureDialog.h  qRFCNoticeDialog.h  qRFCTools.h  qRFCTrainingDialog.h  qRandomForestClassifier.h
plugins/core/Standard/qRandomForestClassifier/src/: CMakeLists.txt  Classifier.cpp  qRFCClassifDialog.cpp  qRFCEvaluationDialog.cpp  qRFCFeatureDialog.cpp  qRFCTools.cpp  qRFCTrainingDialog.cpp  qRandomForestClassifier.cpp
plugins/core/Standard/qRandomForestClassifier/ui/: CMakeLists.txt  qRFCClassifDialog.ui  qRFCNoticeDialog.ui  qRFCTrainingDialog.ui
